# fspider

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test_fixtures/alpha/: a  b
test_fixtures/alpha/bravo/: d
test_fixtures/alpha/bravo/charlie/: c
