[package]
name = "fspider"
version = "0.1.0"
authors = ["Robin Kautz <mail@bob3000.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
async-std = "1.5.0"
md5 = "0.7.0"
async-recursion = "0.3.1"
structopt = "0.3.14"
indicatif = "0.14.0"
console = "0.11.2"
exitfailure = "0.5.1"
